使用ListFragment来显示中国的省份

--- a/Android/ListFragmentExample/app/src/main/res/values/strings.xml
+++ b/Android/ListFragmentExample/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ListFragment Example</string>
+    <string name="app_name">中国的省份</string>
 
     <string name="action_settings">Settings</string>
 </resources>
